<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".control.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_cerveja"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:text="@string/barcode_header"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:layout_gravity="center_horizontal"
        android:background="#747474"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_cerveja_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/lbl_cerveja"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/lbl_cerveja"
            android:layout_below="@+id/lbl_cerveja"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/lbl_cerveja"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/mensagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/lbl_cerveja"
            android:layout_below="@+id/lbl_cerveja"
            android:layout_gravity="left|center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/barcode_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/lbl_cerveja"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/lbl_cerveja"
            android:layout_below="@+id/lbl_cerveja"
            android:layout_gravity="left|center"
            android:text="Nome Cerveja"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/marca_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/lbl_cerveja"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/lbl_cerveja"
            android:layout_below="@+id/lbl_cerveja"
            android:layout_gravity="top|left|center"
            android:text="Marca"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/precoMedio_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/lbl_cerveja"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/lbl_cerveja"
            android:layout_below="@+id/lbl_cerveja"
            android:layout_gravity="top|left|center"
            android:text="Preço Médio"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/menorPreco_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/lbl_cerveja"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/lbl_cerveja"
                android:layout_below="@+id/lbl_cerveja"
                android:layout_weight="1"
                android:text="Menor Preço"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/menorPreco_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/lbl_cerveja"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/lbl_cerveja"
                android:layout_below="@+id/lbl_cerveja"
                android:layout_weight="1"
                android:text="Local"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/lbl_cerveja"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/lbl_cerveja"
                android:layout_below="@+id/lbl_cerveja"
                android:layout_weight="1"
                android:text="Maior Preço"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/lbl_cerveja"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/lbl_cerveja"
                android:layout_below="@+id/lbl_cerveja"
                android:layout_weight="1"
                android:text="Local"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <CheckBox
            android:id="@+id/auto_focus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/barcode_value"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/auto_focus" />

        <CheckBox
            android:id="@+id/use_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/auto_focus"
            android:layout_gravity="center"
            android:checked="false"
            android:text="@string/use_flash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/read_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="left|bottom"
            android:layout_weight="1"
            android:text="@string/read_barcode" />

        <!--<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adicionar"
            android:id="@+id/btn_adicionar"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/use_flash"
            android:layout_alignEnd="@+id/use_flash"
            android:layout_weight="1"
            android:layout_gravity="bottom|right" />-->
    </LinearLayout>

</LinearLayout>
